syntax = "proto3";

package dev.warashi.muscat;
option go_package="github.com/Warashi/muscat/pb";

message OpenRequest {
  string uri = 1;
}
message OpenResponse {}

message CopyRequest {
  bytes Body = 1;
}

message CopyResponse {}

message PasteRequest {}
message PasteResponse {
  bytes Body = 1;
}

message HealthRequest { }

message HealthResponse {
  int64 pid = 1;
}

message GetInputMethodRequest { }

message GetInputMethodResponse {
  string id = 1;
}

message SetInputMethodRequest {
  string id = 1;
}

message SetInputMethodResponse { }

service Muscat {
  rpc Health(HealthRequest) returns (HealthResponse);

  rpc Open(OpenRequest) returns (OpenResponse);

  rpc Copy(stream CopyRequest) returns (CopyResponse);
  rpc Paste(PasteRequest) returns (stream PasteResponse);

  rpc GetInputMethod(GetInputMethodRequest) returns (GetInputMethodResponse);
  rpc SetInputMethod(SetInputMethodRequest) returns (SetInputMethodResponse);
}
